--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,8 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<optional>true</optional>
+			<version>1.16.18</version>
+			<type>jar</type>
 		</dependency>
 		<dependency>
 			<groupId>com.mysql</groupId>
