--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,25 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+
+			<groupId>org.springdoc</groupId>
+
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+
+			<version>2.4.0</version>
+
+		</dependency>
+
+		<dependency>
+
+			<groupId>org.springdoc</groupId>
+
+			<artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
+
+			<version>2.4.0</version>
+
+		</dependency>
+		<dependency>
 			<groupId>com.coderhouse</groupId>
 			<artifactId>clase-12</artifactId>
 			<version>v2.0.1</version>
