--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
+			<version>1.16.18</version>
 			<type>jar</type>
 		</dependency>
 		<dependency>
